# ai-project-space

./: .gitignore  PHASE3_COMPLETION_SUMMARY.md  PHASE3_TEST_REPORT.md  PHASE3_WORK_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TEST_REPORT.md  TODO.md  docker-compose.yml  env.example  project_requirements.md  pyproject.toml  start_backend.py  start_dev.py  start_frontend.py  工作报告_2025-07-19.md  权限系统问题记录.md
.cursor/rules/: my-frontend.mdc
backend/: Dockerfile  check_db_simple.py  check_db_structure.py  fix_file_names.py  init_chat_db.py  init_database.py  start_backend.py
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  chat_backup.py  chat_clean.py  chat_db.py  models.py
backend/app/api/api_v1/: api.py
backend/app/core/: __init__.py  config.py  database.py  init_db.py  logging.py  model_config.py
backend/app/models/: __init__.py  base.py  chat.py  file.py  project.py  qa.py  user.py
backend/app/schemas/: auth.py  file.py
backend/app/services/: ai_service.py  auth_service.py  file_service.py  file_storage.py  minio_service.py  model_loader.py  volcengine_client.py
backend/app/utils/: file_utils.py
frontend/: env.local  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: layout-new.tsx  page.tsx
frontend/app/dashboard/files/: page.tsx
frontend/app/status/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/auth/: DashboardGuard.tsx
frontend/components/features/: Chat.tsx  ChatOptimized.tsx  FilePreview.tsx  FileUpload.tsx  FileUploadWithPermissions.tsx  StreamingMarkdown.tsx  TagManager.tsx
frontend/components/layout/: Header.tsx  MainNavbar.tsx  Sidebar.tsx
frontend/components/providers/: ToastProvider.tsx
frontend/components/ui/: Button.tsx  FormField.tsx  Input.tsx  Modal.tsx  PasswordStrengthIndicator.tsx
frontend/tests/: README.md  login.spec.ts
vector_storage/: index.faiss  index.pkl  metadata.json
(+11 files in other folders)
