[project]
name = "ai-project-manager"
version = "0.1.0"
description = "AI加持的项目管理系统，支持多模态内容和智能问答"
authors = [
    {name = "AI Project Manager Team", email = "team@example.com"}
]
dependencies = [
    # Web框架
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    
    # 数据库
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    
    # AI和机器学习
    "openai>=1.3.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    
    # 文件处理
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pillow>=10.1.0",
    "opencv-python>=4.8.0",
    
    # 网络请求和解析
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # 认证和安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # 配置管理
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # 日志和监控
    "loguru>=0.7.0",
    
    # 工具库
    "pathlib>=1.0.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    
    # Streamlit扩展
    "streamlit-authenticator>=0.2.3",
    "streamlit-option-menu>=0.3.6",
    "plotly>=5.17.0",
    "altair>=5.2.0",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
] 

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"


